--- a/great-idea/css/services.css
+++ b/great-idea/css/services.css
@@ -26,19 +26,7 @@ button {
   font-family: "Gayathri", sans-serif;
 }
 
-button {
-  background-color: ghostwhite;
-  padding: 2% 2% 1%;
-  border: solid 1px grey;
-  border-radius: 3px;
-  outline: none;
-}
-
-button:hover {
-  background-color: rgb(255, 255, 255);
-  border: solid 1px rgb(83, 83, 83);
-}
-
+/* navigator */
 .nav-banner {
   display: flex;
   margin: 2% 0;
@@ -60,7 +48,7 @@ button:hover {
 .nav-container a:hover {
   color: rgb(53, 53, 53);
   background-color: gainsboro;
-  transition: .4s;
+  transition: 0.4s;
 }
 
 .logo-container {
@@ -69,14 +57,17 @@ button:hover {
   justify-content: flex-end;
 }
 
+/* image banner */
 .banner-img-container img {
   width: 100%;
 }
 
+/* first section of content */
 .section1 {
   margin: 4% 0 4%;
 }
 
+/* second section of content */
 .section2 {
   display: flex;
   flex-wrap: wrap;
@@ -98,6 +89,20 @@ button:hover {
   margin: 0 0 2%;
 }
 
+button {
+  background-color: ghostwhite;
+  padding: 2% 2% 1%;
+  border: solid 1px grey;
+  border-radius: 3px;
+  outline: none;
+}
+
+button:hover {
+  background-color: rgb(255, 255, 255);
+  border: solid 1px rgb(83, 83, 83);
+}
+
+/* third section of content */
 .section3 {
   display: flex;
   justify-content: space-between;
@@ -114,7 +119,27 @@ ul li {
   list-style-type: square;
 }
 
+/* page footer */
 footer {
   text-align: center;
   margin: 6%;
+}
+
+/* media query for secret mobile "dark mode" */
+@media screen and (max-width: 600px) {
+  body {
+    background-color: rgb(136, 136, 136);
+    transition: 2s;
+  }
+
+  .nav-container a {
+    color: white;
+  }
+}
+
+@media screen and (min-width: 601px) {
+  body {
+    background-color: rgb(255, 255, 255);
+    transition: 2s;
+  }
 }
